[package]
name = "clickhouse-pool"
version = "0.0.1"
edition = "2021"
license-file = "LICENSE"
description = "a crate to create a pool of clickhouse connections"
repository = "https://github.com/acsandmann/clickhouse-pool"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"]}
clickhouse = "0.12"

[dev-dependencies]
futures = "0.3"
clickhouse = { version = "0.12", features = ["test-util"] }
once_cell = "1.19"